Implemented custom cans sizes Input
new:
	- added a new input component to recieve a string of cans sizes. This string is parsed into an array with numbers format using semicolon as condition and ignoring NaN elements. All this is done when cans amount is calculated inside calculate cans in WallMethods.js

--- a/src/debug.css
+++ b/src/debug.css
@@ -55,7 +55,7 @@ body {
     justify-content: center;
 }
 
-.HeightInput-div, .InkLayersInput-div, .InkEfficiencyInput-div, .WallsAmountInput-div,
+.Walls-ConfigInputsDiv > div,
 .WidthInput-div, .WallDuplicates-div, .ObjectsAmountInput-div {
     display: flex;
     flex-direction: column;
